Plotted MotionDetector Data

--- a/MotionDetector/EMD_HR.ipynb
+++ b/MotionDetector/EMD_HR.ipynb
@@ -8,9 +8,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "- The ommatidia data contains the lens positions, ommatidia directions, and acceptance angles. The hexagonal coordinates detemines the neighboring relationship of the ommatidia. (see \"hex_coordinates.ipynb\")\n",
     "\n",
     "- Input data from compoundRay is a time sequence of vectors. Each vector contains the averaged values of all ommatidia. The order of the vector corresponds to the order of the ommatidia data. \n",
@@ -29,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +40,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -65,15 +68,50 @@
     "$y(t) = \\frac{u(t) + u(t-1) - A y(t-1)}{B}$\n",
     "\n",
     "Now we compare the adjacent values before and after the low-pass filter (time delay) compute motion signal $M_{HR}$:  \n",
-    "$M_{HR} = y(t, x0) \\times u(t, x1) - y(t, x1) \\times u(t, x1)$"
+    "$M_{HR} = y(t, x0) \\times u(t, x1) - y(t, x1) \\times u(t, x0)$"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### parameters following Michael's \"JEB2013 sims\" code\n",
+    "\n",
+    "1. Obtain ommatidial data with values and positions.\n",
+    "\n",
+    "2. Split ind_nb into left and right eye and use for two for loops (frame and direction)\n",
+    "\n",
+    "3. Apply low pass filter to all frames for each ommatidia (save copy)\n",
+    "\n",
+    "4. Loop through each frame, then direction, use math formula, and build 30 frame by 6 direction matrix for each ommatidia.\n",
+    "\n",
+    "5. Apply low pass filter to each 30 frame row of the 6 direction matrix.    \n",
+    "\n",
+    "Assume fly speed is 23 cm/s.\n",
+    "\n",
+    "distance step size = 0.05 cm\n",
+    "\n",
+    "time step size = 0.05/23 s\n",
+    "\n",
+    "Low pass filter for ommatidium = 30 ms\n",
+    "\n",
+    "Low pass filter for output signal = 0.2 s\n",
+    "\n",
+    "Low pass filter for ommatidium (RC time): tau_HR = 30 ms = $\\tau_{HR}$  \n",
+    "$A_{i} = 1 - \\frac{2 \\tau_{HR}}{T}$  \n",
+    "$B_{i} = 1 + \\frac{2 \\tau_{HR}}{T}$  \n",
+    "\n",
+    "Low pass filter for output signal (RC time): tau_out = 0.2 s = $\\tau_{out}$  \n",
+    "$A_{o} = 1 - \\frac{2 \\tau_{out}}{T}$  \n",
+    "$B_{o} = 1 + \\frac{2 \\tau_{out}}{T}$  \n",
+    "\n",
+    "Let $u(t)$ be the input (raw ommatidia value) at time t, and $y(t)$ be the output (after lowpass filter) at time t. Then  \n",
+    "$y(t) = \\frac{u(t) + u(t-1) - A y(t-1)}{B}$\n",
+    "\n",
+    "Now we compare the adjacent values before and after the low-pass filter (time delay) compute motion signal $M_{HR}$:  \n",
+    "$M_{HR} = y(t, x0) \\times u(t, x1) - y(t, x1) \\times u(t, x0)$"
+   ]
   }
  ],
  "metadata": {
@@ -92,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
